[package]
name = "cobblehelm_maze"
version = "0.2.0-pre"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking", "serialize"] }
clap = { version = "4.3", features = ["derive"] }
derive_more = "0.99"
fastrand = "1.9"
serde = { version = "1.0", features = ["derive"] }
vergen = { version = "8.0", features = [ "build", "git", "gitcl" ]}

[build-dependencies]
vergen = { version = "8.0", features = [ "build", "git", "gitcl" ]}
