[package]
name = "cobblehelm_maze"
version = "0.2.0-pre"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "*", features = ["dynamic_linking", "serialize"] }
clap = { version = "*", features = ["derive"] }
derive_more = "*"
fastrand = "*"
serde = { version = "*", features = ["derive"] }
vergen = { version = "*", features = [ "build", "git", "gitcl" ]}

[build-dependencies]
vergen = { version = "*", features = [ "build", "git", "gitcl" ]}
